--- a/README
+++ b/README
@@ -2,5 +2,9 @@ libadwaita
 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/libadwaita.tar.zst
 ## LGPL-3.0-or-later
 
+nm
+- https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/nm.tar.zst
+## GPLv2
+
 example
 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/example.tar.zst
