--- a/README
+++ b/README
@@ -1,14 +1,13 @@
 libadwaita
 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/libadwaita.tar.zst
 ## LGPL-3.0-or-later
+> GNOME GTK4 library
 
 nm
 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/nm.tar.zst
 ## GPLv2
-
-nim
-- https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/nim.tar.zst
-## MIT
+> NetworkManager
 
 example
 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/example.tar.zst
+> example package
