--- a/README
+++ b/README
@@ -56,3 +56,128 @@ zenity - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/zenity.ta
 ## GPL-2.0-or-later
 > A GTK+ dialog library for displaying message boxes and input dialogs
 version 4.2.1
+
+bash - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/bash.tar.zst
+## GPL-3.0-or-later
+> The GNU Project's shell
+version 5.3
+
+binutils - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/binutils.tar.zst
+## GPL-3.0-or-later
+> GNU binary utilities (as, ld, etc.)
+version 2.46.0
+
+bison - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/bison.tar.zst
+## GPL-3.0-or-later
+> GNU general-purpose parser generator
+version 3.8
+
+bool - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/bool.tar.zst
+## GPL-3.0-or-later
+> Utility to print boolean values
+version 0.2.2
+
+bzip2 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/bzip2.tar.zst
+## BSD-style
+> High-quality data compressor
+version 1.0.8
+
+diffutils - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/diffutils.tar.zst
+## GPL-3.0-or-later
+> GNU utilities for finding differences between files
+version 3.10
+
+findutils - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/findutils.tar.zst
+## GPL-3.0-or-later
+> GNU utilities to find files (find, xargs, locate)
+version 4.10.0
+
+gawk - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/gawk.tar.zst
+## GPL-3.0-or-later
+> GNU awk pattern matching language
+version 5.3.1
+
+grep - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/grep.tar.zst
+## GPL-3.0-or-later
+> GNU pattern matching utility
+version 3.12
+
+groff - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/groff.tar.zst
+## GPL-3.0-or-later
+> GNU document formatting system
+version 1.23.0
+
+gzip - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/gzip.tar.zst
+## GPL-3.0-or-later
+> GNU compression utility
+version 1.13
+
+hello - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/hello.tar.zst
+## GPL-3.0-or-later
+> GNU greeting program
+version 2.12
+
+libsigsegv - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/libsigsegv.tar.zst
+## GPL-2.0-or-later
+> Library for handling page faults in user mode
+version 2.15
+
+mpc - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/mpc.tar.zst
+## LGPL-3.0-or-later
+> Library for the arithmetic of complex numbers
+version 1.3.1
+
+mpfr - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/mpfr.tar.zst
+## LGPL-3.0-or-later
+> Library for multiple-precision floating-point computations
+version 4.2.2
+
+nano - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/nano.tar.zst
+## GPL-3.0-or-later
+> Small and friendly text editor
+version 8.7
+
+ncurses - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/ncurses.tar.zst
+## MIT
+> Library for terminal-independent screen painting
+version 6.6
+
+parted - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/parted.tar.zst
+## GPL-3.0-or-later
+> GNU partition manipulation program
+version 3.6
+
+readline - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/readline.tar.zst
+## GPL-3.0-or-later
+> GNU library for command-line editing
+version 5.0.5
+
+sed - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/sed.tar.zst
+## GPL-3.0-or-later
+> GNU stream editor
+version 4.9
+
+tack - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/tack.tar.zst
+## GPL-2.0-or-later
+> terminfo action checker
+version 1.10
+
+tar - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/tar.tar.zst
+## GPL-3.0-or-later
+> GNU tape archiver
+version 1.35
+
+wget2 - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/wget2.tar.zst
+## GPL-3.0-or-later
+> File download utility, successor to GNU Wget
+version 2.2.1
+
+which - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/which.tar.zst
+## GPL-3.0-or-later
+> Shows the full path of (shell) commands
+version 2.23
+
+xorriso - https://github.com/redroselinux/car3-pkgs/raw/refs/heads/main/xorriso.tar.zst
+## GPL-3.0-or-later
+> ISO 9660 Rock Ridge Filesystem Manipulator
+version 1.5.6
